plugins {
    id 'fabric-loom' version '1.5-SNAPSHOT'
    id 'maven-publish'
}

version = '1.1.2-beta-fabric-1.20.1'
group = 'com.cleaveore'

base {
    archivesName = 'cleaveore'
}

repositories {
    mavenCentral()
}

// ── Minecraft & Fabric versions ───────────────────────────────────────────────
// Targeting Minecraft 1.20.4 — the last 1.20.x release before 1.21.
// Update these three version strings together when porting to a new MC version.
//
// Find matching versions at: https://fabricmc.net/develop/
def minecraft_version      = "1.20.1"
def yarn_mappings          = "1.20.1+build.10"
def loader_version         = "0.16.12"
def fabric_api_version     = "0.92.8+1.20.1"

dependencies {
    // Use Fabric Loom's gradle extension for MC + mappings
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    // Fabric API — provides the event hooks, registry wrappers, particle
    // factory registry, and FabricBlockSettings we use throughout the mod
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    // Generates -sources.jar alongside the mod jar for easier debugging
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}
